<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main">Your Nearest Places</string>
    <string name="app_name">Health Care Pro</string>
    <string name="app_name_info">Thông tin</string>
    <string name="action_settings">Settings</string>
    <string name="line">Line</string>
    <string name="bar">Bar</string>
    <string name="pie">Pie</string>
    <string name="menu_setup_string">Cài đặt</string>
    <string name="menu_share_string">Chi sẻ</string>
    <string name="step_run_title">Thể dục</string>
    <string name="news_title">Tin tức và y học</string>
    <string name="btnStartString">Bắt đầu</string>
    <string name="btnStopString">Dừng</string>
    <string name="btnHelpString">Trợ giúp</string>
    <string name="note">Note</string>
    <string name="hr_last_date_demo">05.11.1987 13:30</string>
    <string name="status_nomal">Bình thường</string>
    <string name="status_relax">Nghỉ ngơi</string>
    <string name="status_before_sport">Trước vận động</string>
    <string name="status_after_sport">Sau vận động</string>
    <string name="status_max">Nhịp tim tối đa</string>
    <string name="detail_activity_note_hint">Thêm ghi chú</string>
    <string name="detail_activity_line_title_feeling">Bạn cảm thấy thế nào?</string>
    <string name="detail_activity_line_title_type">Trạng thái</string>
    <string name="detail_activity_scale_red">>90</string>
    <string name="detail_activity_scale_green">&lt;60</string>
    <string name="detail_activity_scale_yellow">60–90</string>
    <string name="beats_per_minute">B/M</string>
    <string name="kg_per_m">KG/M2</string>
    <string name="cm_per_cm">CM/CM</string>
    <string name="tutorial_camera">Hướng dẫn sử dụng</string>
    <string name="tutorial_camera_decription">Nhẹ đặt ngón tay trỏ của bạn trên ống kính camera và đèn flash ở mặt sau của điện thoại của bạn. Hãy chắc chắn rằng các ống kính và đèn flash được bao phủ hoàn toàn. Giữ cho đến khi đo xong.</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="connect_button">Thử lại</string>
    <string name="connect_failed_mesage">Không kết nối được với GooglePlay Service</string>
    <string name="default_text_heart_rate">--</string>
    <string name="add_doctor_title">Thêm địa chỉ bác sĩ</string>
    <string name="lbadd_doctor_name">Tên bác sĩ</string>
    <string name="lbadd_doctor_skypes">Địa chỉ skype</string>
    <string name="lbadd_doctor_viber">Địa chỉ Viber</string>
    <string name="lbadd_doctor_number_call">Số điện thoại</string>
    <string name="btn_add_doctor">Thêm</string>
    <string name="list_doctor_skypes">Danh sách</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Đo nhịp tim</item>
        <item>Chỉ số WHR</item>
        <item>Chỉ số BMI</item>
        <item>Đo số bước chạy</item>
        <item>Tin tức và y học</item>
        <item>Thông tin</item>
        <item>Danh sách bác sĩ</item>
        <item>Chẩn đoán</item>
        <item>Tra cứu thuốc tây</item>
        <item>Xóa toàn bộ dữ liệu</item>
        <item>Thoát</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_icon</item>
        <item>@drawable/heartrate_icon</item>
        <item>@drawable/whr_icon</item>
        <item>@drawable/bmi_icon</item>
        <item>@drawable/run_icon</item>
        <item>@drawable/news_ico</item>
        <item>@drawable/info</item>
        <item>@drawable/doctor14</item>
        <item>@drawable/diagnose_icon</item>
        <item>@drawable/searchicon</item>
        <item>@drawable/recycle_bin</item>
        <item>@drawable/exit_icon</item>
    </array>
    <!-- whr -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="lbCeString">Vòng eo (cm)  </string>
    <string name="lbCmString">Vòng mông (cm)</string>
    <string name="cbMaleString">Nam</string>
    <string name="cbFeMaleString">Nữ</string>
    <string name="btnCalculateWHRString">Tính WHR</string>
    <string name="btnReinputString">Nhập lại</string>
    <string name="btnHistoryString">Lịch sử</string>
    <string name="lbTitleWHRString">WHR</string>
    <string name="tbxResultWHRString">WHR</string>
    <string name="lbTitleResultWHRString">WHR của bạn:</string>
    <string name="lbNoteWHRString">Chú ý:\nSố đó vòng eo (bụng) được đo ở nơi nhỏ nhất của bụng, vòng mông được đo tại nơi to nhất của mông</string>
    <string name="tbxImpactString">Mức độ ảnh hưởng</string>
    <string name="whr_status_nomal">Sức khỏe tốt</string>
    <string name="whr_status_risk_little">Ít nguy hiểm</string>
    <string name="whr_status_risk">Mức độ nguy hiểm trung bình</string>
    <string name="whr_status_risk_much">Rất nguy hiểm</string>
    <!-- bmi -->
    <string name="lbHeightString">Chiều cao (m)</string>
    <string name="lbWeightString">Cân nặng (kg)</string>
    <string name="lbAgeString">Tuổi</string>
    <string name="btnCalculateBMIString">Tính BMI</string>
    <string name="btnSave">Lưu lại</string>
    <string name="lbTitleBMIString">BMI</string>
    <string name="tbxResultBMIString">BMI</string>
    <string name="lbTitleResultBMIString">BMI của bạn:</string>
    <string name="cbWHOString">WHO</string>
    <string name="cbIDIAndWPROString">IDI And WPRO</string>
    <string name="lbNoteBMIString">Chú ý:\nChỉ số BMI không áp dụng cho người mới ốm dậy, phụ nữ mang thai và vận động viên thể hình</string>
    <string name="tbvCoutString">Phần mềm chăm sóc sức khỏe xin chào các bạn\n
        chọn chức năng bên trái để sử dụng phần mềm</string>
    <!-- step run -->
    <string name="btnStartCountStepRun">Bắt đầu</string>
    <string name="btnStopCountStepRun">Dừng</string>
    <string name="btnResetCountStepRun">Thiết lập lại</string>
    <string name="txtHeartRateStatusString">Nhịp tim</string>
    <string name="txtStepRunStatusString">Bước chạy</string>
    <string name="txtBMIStatusString">Chỉ số BMI</string>
    <string name="txtWHRStatusString">Chỉ số WHR</string>
    <string name="txtTargetsString">Chỉ tiêu</string>
    <string name="txtTodayString">Hôm nay</string>
    <string name="txtStartString">Chỉ số WHR</string>
    <string name="txtYesterdayString">Hôm qua</string>
    <string name="txtTarget">Mục tiêu</string>
    <string name="txtTargetHint">Nhập mục tiêu của bạn</string>
    <string name="aboutContent">Vấn đề trọng tâm trong chăm sóc sức khỏe là thể chất, ngoài việc ăn uống điều độ cần có sự theo dõi thể trạng thường xuyên là điều cần thiết. Health Care giúp bạn theo dõi thường xuyên các chỉ số BMI (cân nặng, chiều cao), WHR (vòng eo/vòng mông), theo dõi quá trình tập thể dục (đo số bước đi trong ngày). Sử dụng Health Care để có thể chăm sóc sức khỏe không cần một thiết bị hỗ trợ nào khác, tối ưu hóa sự tập luyện và theo dõi sự tiến bộ của bạn</string>
    <string name="avg_title">Nhịp tim trung bình:</string>
    <string name="loadscreen">GuideCook</string>
    <string name="login">Đăng nhập</string>
    <string name="loginName">Tên đăng nhập</string>
    <string name="loginPassword">Mật khẩu</string>
    <string name="register">Đăng ký tài khoản</string>
    <string name="timkiem">Tìm kiếm triệu chứng</string>
    <string name="label_nhacnho">Nhắc nhở</string>
    <string name="label_phatsinh">Phát sinh</string>
    <string name="label_thucdon_child_nguyenlieu">Chi tiết món ăn</string>
    <string name="phatsinh_songuoilon_content" />
    <string name="phatsinh_sotrecon_content" />
    <string name="monan">Danh sách triệu chứng</string>
    <string name="symptoms_avatar">Symptoms Avatar</string>
    <string name="complete_symptoms_list">Switch to a text listing of symptoms</string>
    <string name="switch_gender">Switch avatar gender</string>
    <string name="rotate_avatar">Xoay avatar</string>

</resources>